--- a/index.html
+++ b/index.html
@@ -3,11 +3,52 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Il mio Viaggio a Londra</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' >
 </head>
 <body>
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="./img/ferris-wheel-1.jpg" alt="ruota panoramica">
+        <img src="./img/ferris-wheel-2.jpg" alt="ruota panoramica">
+        <img src="./img/ferris-wheel-3.jpg" alt="ruota panoramica">
+    </header>
+
+    <main>
+        <section>
+               <hr>
+               <h2>Le mie spese</h2>
+               <table>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>320&euro;</td>
+                    </tr>   
+               </table>
+               <hr> 
+        </section>
+    </main>
     
 </body>
 </html>
