--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </header>
 
     <main>
+        <!--tabbella spese-->
         <section>
                <hr>
                <h2>Le mie spese</h2>
@@ -48,7 +49,18 @@
                </table>
                <hr> 
         </section>
+        <section>
+              <h2>Cose da fare</h2>
+               <ul>
+                 <li>Visitare la Tower of London&#10007;</li>
+                 <li>Visitare greenwich &#10003;</li>
+                 <li>Ascoltare un artista di strada a Covent Garden&#10003;</li>
+                 <li>Mangiare il tipico Fish and Chips inglese&#10007;</li>
+               </ul>
+        </section>
+            <hr>
     </main>
+
     
 </body>
 </html>
