--- a/index.html
+++ b/index.html
@@ -59,7 +59,33 @@
                </ul>
         </section>
             <hr>
+            <section>
+                <h2>Info utili:</h2>
+                <ol>
+                    <li> Numeri utili di Emergenza
+                        <ul>
+                           <li>999 - Emergenza</li> 
+                           <li>101 - Numero Polizia</li>
+                           <li>111 - Numero assistenza medica</li>
+                        </ul>
+                    </li>
+                    <li>Hotel
+                        <ul>
+                            <li><strong>Nome Hotel:</strong>buckingham Palace</li>
+                            <li><strong>Indirizzo Hotel:</strong>Westminster. London SW1A 1AA. Regno Unito</li>
+                        </ul>
+                    </li>
+                    <li>Aereo
+                        <ul>
+                            <li><strong>Andata:</strong>YI234X, ore 9.30 da Milano Malpensa</li>
+                            <li><strong>Volo Ritorno:</strong>YI236X ore 18 30 da London Heathrow</li>
+                        </ul>
+                    </li>
+                </ol>
+            </section>
+            <hr>
     </main>
+    
 
     
 </body>
