--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
             </section>
             <hr>
     </main>
-    
+    <footer>
+        <h2>Le foto</h2>
+        <img src="./img/london.jpg" alt="Londra">
+        <img src="./img/towerbridge.jpg" alt="Ponte di Londra">
+    </footer>
 
     
 </body>
