--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
                         <td>120&euro;</td>
                     </tr>
                     <tr>
-                        <td>Totale</td>
-                        <td></td>
-                        <td>320&euro;</td>
+                        <td colspan="2">Totale</td>
+                        <td >320&euro;</td>
                     </tr>   
                </table>
                <hr> 
